ECOSUI-1858 - Preview Widget. Add widget settings and no reload component after document changed corrected visibility toolbar styles

--- a/src/components/widgets/DocPreview/style.scss
+++ b/src/components/widgets/DocPreview/style.scss
@@ -1,9 +1,8 @@
 @import '../../../styles/constants';
 
-$border-toolbar: #c1c1c1;
-$background-toolbar: #fbfbfb;
-$background-viewer: #f5f5f5;
-$border-base: #c1c1c1;
+$border-toolbar: $color-gray-2;
+$background-viewer: $color-gray-15;
+$border-base: $color-gray-5;
 
 %base-flex {
   display: flex;
@@ -64,9 +63,7 @@ $border-base: #c1c1c1;
     width: 100%;
 
     &_indents {
-      padding-top: 14px;
-      padding-right: 17px;
-      padding-left: 17px;
+      padding: 5px 17px 0;
     }
   }
 
@@ -142,8 +139,7 @@ $border-base: #c1c1c1;
   &__toolbar {
     @extend %base-flex;
     justify-content: center;
-    background-color: $background-toolbar;
-    border: 1px solid $border-base;
+    background-color: transparent;
     min-height: 45px;
     min-width: 250px;
 
@@ -180,6 +176,12 @@ $border-base: #c1c1c1;
 
         .icon {
           font-size: $font-size-small;
+        }
+      }
+
+      &-item {
+        &_disabled {
+          opacity: 0.5;
         }
       }
     }
@@ -240,9 +242,7 @@ $border-base: #c1c1c1;
     background-color: $background-viewer;
     position: relative;
     height: calc(100% - 45px);
-    border-bottom: 1px solid $border-base;
-    border-right: 1px solid $border-base;
-    border-left: 1px solid $border-base;
+    border: 1px solid $border-base;
 
     &_fullscreen {
       height: 100vh;
